--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "authors": [
     "Yaroslav Konoplov <yaroslav@inbox.com>"
   ],
-  "description": "This snippet of code automatically initializes google analytics with config retrieved from meta tags",
+  "description": "This snippet of code automatically initializes google analytics with config retrieved from meta tags. Friendly with Turbolinks and pjax.",
   "main": "initializer.coffee",
   "license": "MIT",
   "ignore": [
