--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "Yaroslav Konoplov <eahome00@gmail.com>"
   ],
   "description": "This snippet of code automatically initializes google analytics with config retrieved from meta tags. Friendly with Turbolinks and pjax.",
-  "main": "initializer.coffee",
+  "main": "build/google-analytics-initializer.js",
   "license": "MIT",
   "ignore": [
     "**/.*",
